--- a/API/package.json
+++ b/API/package.json
@@ -4,11 +4,12 @@
   "description": "Backend en Mongo y Express",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon ./index.js"
+    "dev": "nodemon ./index.js"
   },
   "author": "Adrian",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.14"
   },
@@ -16,4 +17,3 @@
     "nodemon": "^2.0.7"
   }
 }
-
